corpus/markup.txt
================================================================================
Markup.1 - All markup kinds
================================================================================
*bold*
/italic/
_underline_
+strikethrough+
`verbatim`
$inline math$
--------------------------------------------------------------------------------

    (document
      (paragraph
        (bold
          (token)
          (content
            (word))
          (token))
        (italic
          (token)
          (content
            (word))
          (token))
        (underline
          (token)
          (content
            (word))
          (token))
        (strikethrough
          (token)
          (content
            (word))
          (token))
        (verbatim
          (token)
          (content)
          (token))
        (inline_math
          (token)
          (content)
          (token))))

================================================================================
Bold.1a
================================================================================
*word *word*
--------------------------------------------------------------------------------

    (document
      (paragraph
        (bold
          (token)
          (content
            (word)
            (symbol)
            (word))
          (token))))

================================================================================
Bold.1b
================================================================================
*word * word*
--------------------------------------------------------------------------------

    (document
      (paragraph
        (bold
          (token)
          (content
            (word)
            (symbol)
            (word))
          (token))))

================================================================================
Bold.1c
================================================================================
*word* word*
--------------------------------------------------------------------------------

    (document
      (paragraph
        (bold
          (token)
          (content
            (word))
          (token))
        (word)
        (symbol)))

================================================================================
Markup.2 - Complex case
================================================================================
_*[\*label][link]*_
--------------------------------------------------------------------------------

    (document
      (paragraph
        (underline
          (token)
          (content
            (bold
              (token)
              (content
                (link
                  (token)
                  (label
                    (escaped_char
                      (token)
                      (character)))
                  (token)
                  (token)
                  (target)
                  (token)))
              (token)))
          (token))))
